Завершение работы с user service.Добавление swagger документации и тестирование всех методов, исправлние бд: password nullable
